--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/face.jpg" alt="" /></a>
 					<h1><strong>Michael Mahoney</strong>, <br />
-					aspiring software developer.<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					aspiring software developer.<br /></h1>
 				</div>
 			</header>
 
