responsive now. cleaned up and realized working in wrong folder

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Michael Mahoney</strong> - Software Engineering</a>
+					<!-- <a href="index.html" class="logo"><strong>Michael Mahoney</strong> - Software Engineering</a>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/michael-mahoney67/"
 								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/MMahoney6713" class="icon brands fa-github"><span
 									class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					</ul> -->
 				</header>
 
 				<!-- Banner -->
@@ -41,10 +41,9 @@
 							interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
 							egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
 							Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-
 					</div>
 					<span class="image object">
-						<img src="images/headshot.jpg" alt="" />
+						<img src="images/headshot.jpg" alt="Image of Michael Mahoney" />
 					</span>
 				</section>
 
@@ -55,7 +54,7 @@
 					</header>
 					<div class="features">
 						<article>
-							<span class="icon fa-gem"></span>
+							<span class="fab fa-python"></span>
 							<div class="content">
 								<h3>Full-Stack Web Development</h3>
 								<p>I love bringing your content to life by using my skills in product design, database
@@ -162,8 +161,7 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">Demo Images: <a href="https://unsplash.com">Unsplash</a>. <br>
-						Template By: <a href="https://html5up.net">HTML5UP</a>.</p>
+					<p class="copyright">Template By: <a href="https://html5up.net">HTML5UP</a>.</p>
 				</footer>
 
 			</div>
