moved in the spotlight class from another template. Works now, going to try to get formatting for spotlight according to my look

--- a/index.html
+++ b/index.html
@@ -20,21 +20,13 @@
 
 				<!-- Header -->
 				<header id="header">
-					<!-- <a href="index.html" class="logo"><strong>Michael Mahoney</strong> - Software Engineering</a>
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/michael-mahoney67/"
-								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/MMahoney6713" class="icon brands fa-github"><span
-									class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul> -->
 				</header>
 
 				<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Hi, I’m Michael</h1>
+							<h1>Hi, I’m Michael.</h1>
 							<p>Full Stack Web Development</p>
 						</header>
 						<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
@@ -137,9 +129,9 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="index.html">About Me</a></li>
-						<li><a href="index.html">Projects</a></li>
-						<li><a href="index.html">Resume</a></li>
+						<li><a href="about-me.html">About Me</a></li>
+						<li><a href="generic.html">Projects</a></li>
+						<li><a href="elements.html">Resume</a></li>
 					</ul>
 				</nav>
 
@@ -156,6 +148,7 @@
 								href="https://www.linkedin.com/in/michael-mahoney67/">michael-mahoney67/</a></li>
 						<li class="icon brands fa-github"><a href="https://github.com/MMahoney6713">MMahoney6713/</a>
 						</li>
+						<li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li>
 					</ul>
 				</section>
 
