--- a/about-me.html
+++ b/about-me.html
@@ -63,28 +63,24 @@
                                 Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
                         </div>
                         <span class="image">
-                            <img src="images/headshot.jpg" alt="Image of Michael Mahoney" />
+                            <img src="images/unsplash4.jpg" alt="" />
                         </span>
-
                     </div>
 
                     <hr class="major" />
 
-                    <h2>Lorem aliquam bibendum</h2>
-                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-                        venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim
-                        auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque
-                        in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar
-                        mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque
-                        enim turpis, hendrerit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class
-                        aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam
-                        tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc
-                        ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non,
-                        bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus.
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In
-                        non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.
-                    </p>
+                    <h2>Magna etiam veroeros</h2>
+                    <div class="spotlight style1 orient-right content-align-left image-position-center">
+                        <div class="content">
+                            <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
+                                interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
+                                egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
+                                Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+                        </div>
+                        <span class="image">
+                            <img src="images/unsplash5.jpg" alt="" />
+                        </span>
+                    </div>
 
                 </section>
 
