connected all of the pages, added projects and resume pages

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about-me.html">About Me</a></li>
-						<li><a href="generic.html">Projects</a></li>
-						<li><a href="elements.html">Resume</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="resume.html">Resume</a></li>
 					</ul>
 				</nav>
 
@@ -148,7 +148,7 @@
 								href="https://www.linkedin.com/in/michael-mahoney67/">michael-mahoney67/</a></li>
 						<li class="icon brands fa-github"><a href="https://github.com/MMahoney6713">MMahoney6713/</a>
 						</li>
-						<li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li>
+						<!-- <li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li> -->
 					</ul>
 				</section>
 
