--- a/about-me.html
+++ b/about-me.html
@@ -63,7 +63,7 @@
                                 Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
                         </div>
                         <span class="image">
-                            <img src="images/unsplash4.jpg" alt="" />
+                            <img src="images/skiing.jpg" alt="" />
                         </span>
                     </div>
 
@@ -97,9 +97,9 @@
                     </header>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About Me</a></li>
-                        <li><a href="index.html">Projects</a></li>
-                        <li><a href="index.html">Resume</a></li>
+                        <li><a href="about-me.html">About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="resume.html">Resume</a></li>
                     </ul>
                 </nav>
 
