trying to revert...

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -57,6 +57,7 @@
                                 href="https://www.linkedin.com/in/michael-mahoney67/">michael-mahoney67/</a></li>
                         <li class="icon brands fa-github"><a href="https://github.com/MMahoney6713">MMahoney6713/</a>
                         </li>
+                        <li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li>
                     </ul>
                 </section>
 
