--- a/resume.html
+++ b/resume.html
@@ -38,9 +38,9 @@
                     </header>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/about-me">About Me</a></li>
-                        <li><a href="/projects">Projects</a></li>
-                        <li><a href="/resume">Resume</a></li>
+                        <li><a href="about-me.html">About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="resume.html">Resume</a></li>
                     </ul>
                 </nav>
 
