--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 					<div class="content">
 						<header>
 							<h1>Hi, I’m Michael.</h1>
-							<p>Full Stack Web Development</p>
+							<p>&lt; Web Developer &gt;</p>
 						</header>
-						<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
-							interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
-							egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-							Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+						<p>I'm a Full Stack Web Developer with a strong interest in back-end development. In my software
+							development work I leverage my years of experience as a mechanical engineer to build
+							clean, efficient code that is rigorously tested. </p>
+						<p>In particular, I'm excited about building software that helps people grow.</p>
 					</div>
 					<span class="image object">
 						<img src="images/headshot.jpg" alt="Image of Michael Mahoney" />
@@ -46,35 +46,34 @@
 					</header>
 					<div class="features">
 						<article>
-							<span class="fab fa-python"></span>
+							<span class="icon solid fa-laptop-code"></span>
 							<div class="content">
 								<h3>Full-Stack Web Development</h3>
-								<p>I love bringing your content to life by using my skills in product design, database
-									design, and etc</p>
+								<p>I bring your content to life by leveraging my skills in product design and
+									software engineering.</p>
 							</div>
 						</article>
 						<article>
-							<span class="icon solid fa-paper-plane"></span>
+							<span class="icon solid"><i class="fab fa-python"></i></span>
 							<div class="content">
-								<h3>Sapien veroeros</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+								<h3>Back-end with Python</h3>
+								<p>Experienced with leveraging the tools of Flask/SQLAlchemy and Django to develop
+									back-end software for any application.</p>
 							</div>
 						</article>
 						<article>
-							<span class="icon solid fa-rocket"></span>
+							<span class="icon solid"><i class="fab fa-js-square"></i></span>
 							<div class="content">
-								<h3>Quam lorem ipsum</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+								<h3>JavaScript/HTML/CSS</h3>
+								<p>Building sophisticated, event-driven applications by manipulating webpages and
+									fetching external data from APIs. </p>
 							</div>
 						</article>
 						<article>
-							<span class="icon solid fa-signal"></span>
+							<span class="icon solid fa-server"></span>
 							<div class="content">
-								<h3>Sed magna finibus</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+								<h3>PostgreSQL/MySQL</h3>
+								<p>Making performant database models and queries</p>
 							</div>
 						</article>
 					</div>
@@ -140,10 +139,12 @@
 					<header class="major">
 						<h2>Connect with me</h2>
 					</header>
-					<p>I'm always looking to connect with people and hear about what you're up to, what you think of my
-						stuff, etc. Please reach out!</p>
+					<p>I'm always looking to connect with folks and hear about what you're up to, what you think of my
+						projects, and how software can work to improve the lives of people. If you'd like to connect
+						with me, then please reach out!</p>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">michael.mahoney3315@gmail.com</a></li>
+						<li class="icon solid fa-envelope"><a
+								href="mailto:michael.mahoney3315@gmail.com">michael.mahoney3315@gmail.com</a></li>
 						<li class="icon brands fa-linkedin-in"><a
 								href="https://www.linkedin.com/in/michael-mahoney67/">michael-mahoney67/</a></li>
 						<li class="icon brands fa-github"><a href="https://github.com/MMahoney6713">MMahoney6713/</a>
@@ -155,6 +156,7 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<p class="copyright">Template By: <a href="https://html5up.net">HTML5UP</a>.</p>
+					<p class="copyright">Design By: Michael Mahoney</p>
 				</footer>
 
 			</div>
