had to update the footers of ecah file again...

--- a/projects.html
+++ b/projects.html
@@ -142,21 +142,24 @@
                     <header class="major">
                         <h2>Connect with me</h2>
                     </header>
-                    <p>I'm always looking to connect with people and hear about what you're up to, what you think of my
-                        stuff, etc. Please reach out!</p>
+                    <p>I'm always looking to connect with folks and hear about what you're up to, what you think of my
+                        projects, and how software can work to improve the lives of people. If you'd like to connect
+                        with me, then please reach out!</p>
                     <ul class="contact">
-                        <li class="icon solid fa-envelope"><a href="#">michael.mahoney3315@gmail.com</a></li>
+                        <li class="icon solid fa-envelope"><a
+                                href="mailto:michael.mahoney3315@gmail.com">michael.mahoney3315@gmail.com</a></li>
                         <li class="icon brands fa-linkedin-in"><a
                                 href="https://www.linkedin.com/in/michael-mahoney67/">michael-mahoney67/</a></li>
                         <li class="icon brands fa-github"><a href="https://github.com/MMahoney6713">MMahoney6713/</a>
                         </li>
-                        <li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li>
+                        <!-- <li class="icon brands fa-medium-m"><a href="#">MMahoney6713/</a></li> -->
                     </ul>
                 </section>
 
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">Template By: <a href="https://html5up.net">HTML5UP</a>.</p>
+                    <p class="copyright">Design By: Michael Mahoney</p>
                 </footer>
 
             </div>
