updated python comment

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<div class="content">
 								<h3>Back-end with Python</h3>
 								<p>Experienced with leveraging the tools of Flask/SQLAlchemy and Django to develop
-									back-end software for any application.</p>
+									secure back-end software and JSON APIs.</p>
 							</div>
 						</article>
 						<article>
