added projects section and twitter clone. Fixed the image left/right so that it does not flow into next section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<p>I'm a Full Stack Web Developer with a strong interest in back-end development. In my software
 							development work I leverage my years of experience as a mechanical engineer to build
 							clean, efficient code that is rigorously tested. </p>
-						<p>In particular, I'm excited about building software that helps people grow.</p>
+						<p>In particular, I'm excited about building software that help people grow.</p>
 					</div>
 					<span class="image object">
 						<img src="images/headshot.jpg" alt="Image of Michael Mahoney" />
@@ -86,12 +86,14 @@
 					</header>
 					<div class="posts">
 						<article>
-							<a href="#" class="image"><img src="images/unsplash1.jpg" alt="" /></a>
-							<h3>Interdum aenean</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="projects/Warbler/warbler.html" class="image"><img
+									src="projects/Warbler/Images/warbler.jpg" alt="" /></a>
+							<h3>Warbler: A Twitter Clone</h3>
+							<p>Extending the functionality of a Twitter clone; gaining comfort with
+								understanding/cleaning an existing codebase as well as adding additional model
+								functionality.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="projects/Warbler/warbler.html" class="button">Details</a></li>
 							</ul>
 						</article>
 						<article>
@@ -100,7 +102,7 @@
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
 								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Details</a></li>
 							</ul>
 						</article>
 						<article>
@@ -109,7 +111,7 @@
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
 								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">Details</a></li>
 							</ul>
 						</article>
 					</div>
