--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Michael Mahoney</title>
+    <title>Michael Mahoney - Projects</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -25,12 +25,14 @@
                     </header>
                     <div class="posts">
                         <article>
-                            <a href="#" class="image"><img src="images/unsplash1.jpg" alt="" /></a>
-                            <h3>Interdum aenean</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-                                facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            <a href="projects/Warbler/warbler.html" class="image"><img
+                                    src="projects/Warbler/Images/warbler.jpg" alt="" /></a>
+                            <h3>Warbler: A Twitter Clone</h3>
+                            <p>Extending the functionality of a Twitter clone; gaining comfort with
+                                understanding/cleaning an existing codebase as well as adding additional model
+                                functionality.</p>
                             <ul class="actions">
-                                <li><a href="#" class="button">More</a></li>
+                                <li><a href="projects/Warbler/warbler.html" class="button">Details</a></li>
                             </ul>
                         </article>
                         <article>
