--- a/projects/Warbler/warbler.html
+++ b/projects/Warbler/warbler.html
@@ -31,24 +31,23 @@
                     <span class="image main"><img src="images/warbler.jpg" alt="" /></span>
 
 
-                    <hr class="major" />
+                    <hr class="major cleared" />
 
                     <h2>Background</h2>
-                    <div class="project">
-                        <div><span class="image left"><img src="images/setup.JPG" alt="" /></span></div>
-                        <p>Lorem ipsum dolor
-                            sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-                            Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
-                            volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
-                            felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus
-                            euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
-                            felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
-                            praesent.</p>
-                        <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
-                            interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
-                            egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-                            Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-                    </div>
+                    <div><span class="image left"><img src="images/setup.JPG" alt="" /></span></div>
+                    <p>Lorem ipsum dolor
+                        sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+                        volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
+                        felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus
+                        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
+                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
+                        praesent.</p>
+                    <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
+                        interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
+                        egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
+                        Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+
 
                     <hr class="major cleared" />
 
@@ -68,19 +67,52 @@
 
                     <hr class="major cleared" />
 
-                    <h2>Magna etiam veroeros</h2>
-                    <div class="spotlight style1 orient-right content-align-left image-position-center">
-                        <div class="content">
-                            <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
-                                interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
-                                egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-                                Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-                        </div>
-                        <span class="image">
-                            <img src="images/setup3.JPG" alt="" />
-                        </span>
-                    </div>
+                    <h2>Part 2: Connecting to the database, adding the "Like" button</h2>
+                    <div><span class="image left"><img src="images/setup2.JPG" alt="" /></span></div>
+                    <p>Lorem ipsum dolor
+                        sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+                        volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
+                        felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus
+                        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
+                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
+                        praesent.</p>
+                    <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
+                        interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
+                        egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
+                        Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 
+                    <hr class="major cleared" />
+
+                    <h2>Part 3: Adding tests</h2>
+                    <p><span class="image right"><img src="images/setup2.JPG" alt="" /></span>Lorem ipsum dolor
+                        sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+                        volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
+                        felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus
+                        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
+                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
+                        praesent.</p>
+                    <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
+                        interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
+                        egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
+                        Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+
+                    <hr class="major cleared" />
+
+                    <h2>Part 4: Further Study</h2>
+                    <p><span class="image right"><img src="images/setup2.JPG" alt="" /></span>Lorem ipsum dolor
+                        sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                        Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+                        volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
+                        felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus
+                        euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
+                        felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
+                        praesent.</p>
+                    <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
+                        interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet
+                        egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
+                        Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
                 </section>
 
             </div>
