--- a/projects/Warbler/warbler.html
+++ b/projects/Warbler/warbler.html
@@ -52,7 +52,7 @@
                     <hr class="major cleared" />
 
                     <h2>Part 1: Fixing features and cleaning up code</h2>
-                    <p><span class="image right"><img src="Images/setup2.JPG" alt="" /></span>Lorem ipsum dolor
+                    <p><span class="image right"><img src="Images/setup2.jpg" alt="" /></span>Lorem ipsum dolor
                         sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                         Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
                         volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
@@ -68,7 +68,7 @@
                     <hr class="major cleared" />
 
                     <h2>Part 2: Connecting to the database, adding the "Like" button</h2>
-                    <div><span class="image left"><img src="Images/setup2.JPG" alt="" /></span></div>
+                    <div><span class="image left"><img src="Images/setup2.jpg" alt="" /></span></div>
                     <p>Lorem ipsum dolor
                         sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                         Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
@@ -85,7 +85,7 @@
                     <hr class="major cleared" />
 
                     <h2>Part 3: Adding tests</h2>
-                    <p><span class="image right"><img src="Images/setup2.JPG" alt="" /></span>Lorem ipsum dolor
+                    <p><span class="image right"><img src="Images/setup3.JPG" alt="" /></span>Lorem ipsum dolor
                         sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                         Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
                         volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
@@ -101,7 +101,7 @@
                     <hr class="major cleared" />
 
                     <h2>Part 4: Further Study</h2>
-                    <p><span class="image right"><img src="Images/setup2.JPG" alt="" /></span>Lorem ipsum dolor
+                    <p><span class="image right"><img src="Images/setup3.JPG" alt="" /></span>Lorem ipsum dolor
                         sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                         Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
                         volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt
