commiting before making changes

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 					<div class="content">
 						<header>
 							<h1>Hi, I’m Michael.</h1>
-							<p>&lt; Web Developer &gt;</p>
+							<!-- <p>&lt; Web Developer &gt;</p> -->
 						</header>
-						<p>I'm a Full Stack Web Developer with a strong interest in back-end development. In my software
-							development work I leverage my years of experience as a mechanical engineer to build
+						<p>I'm a Product Engineer / Web Developer with a strong interest in full-stack and back-end development. 
+							In my programming work I leverage my years of experience as a mechanical engineer to build
 							clean, efficient code that is rigorously tested. </p>
-						<p>In particular, I'm excited about building software that help people grow.</p>
+						<p>In particular, I'm excited about building software that helps people grow.</p>
 					</div>
 					<span class="image object">
 						<img src="images/headshot.jpg" alt="Image of Michael Mahoney" />
@@ -58,7 +58,7 @@
 							<div class="content">
 								<h3>Back-end with Python</h3>
 								<p>Experienced with leveraging the tools of Flask/SQLAlchemy and Django to develop
-									secure back-end software and JSON APIs.</p>
+									secure back-end software and RESTful APIs.</p>
 							</div>
 						</article>
 						<article>
@@ -86,32 +86,26 @@
 					</header>
 					<div class="posts">
 						<article>
-							<a href="projects/Warbler/warbler.html" class="image"><img
-									src="projects/Warbler/Images/warbler.jpg" alt="" /></a>
+							<a href="projects/capstone1/capstone1.html" class="image">
+								<img src="projects/capstone1/Images/capstone1.jpg" alt="Image of the project" />
+							</a>
+							<h3>Purpose Driven</h3>
+							<p>A goal planner based on creating 'milestones' according to your life mission and the 
+								goals you make to get you there. </p>
+							<ul class="actions">
+								<li><a href="#" class="button">Details</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="projects/Warbler/warbler.html" class="image">
+								<img src="projects/Warbler/Images/warbler.jpg" alt="Image of the project" />
+							</a>
 							<h3>Warbler: A Twitter Clone</h3>
 							<p>Extending the functionality of a Twitter clone; gaining comfort with
 								understanding/cleaning an existing codebase as well as adding additional model
 								functionality.</p>
 							<ul class="actions">
 								<li><a href="projects/Warbler/warbler.html" class="button">Details</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/unsplash2.jpg" alt="" /></a>
-							<h3>Nulla amet dolore</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Details</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/unsplash3.jpg" alt="" /></a>
-							<h3>Tempus ullamcorper</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Details</a></li>
 							</ul>
 						</article>
 					</div>
@@ -129,7 +123,7 @@
 						<h2>Menu</h2>
 					</header>
 					<ul>
-						<li><a href="/">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about-me.html">About Me</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="resume.html">Resume</a></li>
