--- a/projects.html
+++ b/projects.html
@@ -44,42 +44,6 @@
                                 <li><a href="#" class="button">More</a></li>
                             </ul>
                         </article>
-                        <article>
-                            <a href="#" class="image"><img src="images/unsplash3.jpg" alt="" /></a>
-                            <h3>Tempus ullamcorper</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-                                facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button">More</a></li>
-                            </ul>
-                        </article>
-                        <article>
-                            <a href="#" class="image"><img src="images/unsplash1.jpg" alt="" /></a>
-                            <h3>Interdum aenean</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-                                facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button">More</a></li>
-                            </ul>
-                        </article>
-                        <article>
-                            <a href="#" class="image"><img src="images/unsplash2.jpg" alt="" /></a>
-                            <h3>Nulla amet dolore</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-                                facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button">More</a></li>
-                            </ul>
-                        </article>
-                        <article>
-                            <a href="#" class="image"><img src="images/unsplash3.jpg" alt="" /></a>
-                            <h3>Tempus ullamcorper</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-                                facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button">More</a></li>
-                            </ul>
-                        </article>
                     </div>
                 </section>
 
@@ -132,7 +96,7 @@
                         <h2>Menu</h2>
                     </header>
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-me.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
