--- a/about-me.html
+++ b/about-me.html
@@ -96,7 +96,7 @@
                         <h2>Menu</h2>
                     </header>
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-me.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
