--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
                 <!-- Section -->
                 <section>
                     <span class="image main">
-                        <img src="images/resume.png" alt="" />
+                        <img style="max-width: 1000px;" src="images/resume.png" alt="" />
                     </span>
                 </section>
 
@@ -37,7 +37,7 @@
                         <h2>Menu</h2>
                     </header>
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-me.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
